<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="16" />

    <EditText
        android:id="@+id/etExpiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_expiry_date"
        android:inputType="text"
        android:maxLength="5" />

    <EditText
        android:id="@+id/etCvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        android:maxLength="3" />

    <Button
        android:id="@+id/btnBindCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind_card"
        android:textSize="18sp"
        style="@style/Buttons"
        android:layout_marginTop="16dp" />

</LinearLayout>
