<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="28sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/user_email"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/user_email"
        style="@style/EditTextAuth"
        android:layout_marginTop="48dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toTopOf="@id/user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_register" />

    <EditText
        android:id="@+id/user_password"
        style="@style/EditTextAuth"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintBottom_toTopOf="@id/user_confirm_password"/>

    <EditText
        android:id="@+id/user_confirm_password"
        android:layout_marginTop="24dp"
        style="@style/EditTextAuth"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password"
        app:layout_constraintBottom_toTopOf="@id/btn_register"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="250dp"
        android:layout_marginTop="32dp"
        android:text="@string/register"
        android:textSize="20sp"
        style="@style/Buttons"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_confirm_password"
        app:layout_constraintBottom_toTopOf="@id/link_login" />

    <TextView
        android:id="@+id/link_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/already_have_account"
        android:textSize="18sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>
