<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/product_image_gallery_viewpager"
            android:layout_width="0dp"
            android:layout_height="300dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Название товара"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@+id/product_image_gallery_viewpager"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="500 г"
            android:textSize="16sp"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@+id/product_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="999 ₽"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginTop="8dp"

            app:layout_constraintTop_toBottomOf="@+id/product_weight"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_add_to_cart"
            android:layout_width="0dp"
            android:text="@string/add_to_cart"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            style="@style/Buttons"

            app:layout_constraintTop_toBottomOf="@+id/product_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/section_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_info"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"

            app:layout_constraintTop_toBottomOf="@+id/btn_add_to_cart"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_product_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_contents"
            android:textSize="14sp"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="16dp"

            app:layout_constraintTop_toBottomOf="@+id/section_info"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Вода, сахар, сода..."
            android:textSize="16sp"
            android:layout_marginTop="4dp"

            app:layout_constraintTop_toBottomOf="@+id/label_product_contents"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_nutrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nutrition"
            android:textSize="14sp"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="12dp"

            app:layout_constraintTop_toBottomOf="@+id/product_contents"
            app:layout_constraintStart_toStartOf="parent" />

        <TableLayout
            android:id="@+id/nutrition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            app:layout_constraintTop_toBottomOf="@+id/label_nutrition"
            app:layout_constraintStart_toStartOf="parent" >

            <TableRow>
                <TextView
                    android:id="@+id/calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="503"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/proteins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/fats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="25"
                    android:textSize="16sp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/carbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="63"
                    android:textSize="16sp"
                    android:gravity="center"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/kcal"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/proteins"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/fats"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"/>

                <TextView
                    android:text="@string/carbohydrates"
                    android:textSize="14sp"
                    android:textColor="@color/dark_grey"
                    android:gravity="center"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/label_shelf_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shelf_life"
            android:textSize="14sp"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="12dp"

            app:layout_constraintTop_toBottomOf="@+id/nutrition"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_shelf_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="12 месяцев, хранить в сухом месте"
            android:textSize="16sp"
            android:layout_marginTop="4dp"

            app:layout_constraintTop_toBottomOf="@+id/label_shelf_life"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/label_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textSize="14sp"
            android:textColor="@color/dark_grey"
            android:layout_marginTop="12dp"

            app:layout_constraintTop_toBottomOf="@+id/product_shelf_life"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/product_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="abc"
            android:textSize="16sp"
            android:layout_marginTop="4dp"

            app:layout_constraintTop_toBottomOf="@+id/label_brand"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
